# Meshling

./: .gitignore  ENHANCED_UI_ARCHITECTURE.md  LICENSE  README.md  TECHNICAL_PLAN.md  pyproject.toml  requirements.txt
meshling/: __init__.py  __main__.py  app.py  main.py
meshling/core/: __init__.py  connection_manager.py  event_bus.py
meshling/interfaces/: __init__.py  auto_detector.py  base_interface.py  serial_interface.py  tcp_interface.py
meshling/ui/: __init__.py
meshling/ui/styles/: main.tcss
meshling/ui/widgets/: __init__.py
meshling/ui/widgets/common/: __init__.py  enhanced_header.py
meshling/ui/widgets/tabs/: __init__.py  base_tab.py  channels_tab.py  config_tab.py  messages_tab.py  nodes_tab.py  packets_tab.py  tab_container.py
meshling/utils/: __init__.py  exceptions.py  logging.py
